# kanban-tui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.org  treesitter.rs
migrations/: tables.sql
sql/: migrations.sql
src/: app.rs  db.rs  input.rs  lib.rs  main.rs  treesitter.rs  types.rs  ui.rs
tests/: app_tests.rs
