[package]
name = "kanban-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25"
serde = { version = "1.0.148" , features = [ "derive" ] }
serde_json = "1.0.89"
indexmap = { version = "1.9.2" , features = [ "serde" ] }